@@ -1,3 +1,12 @@
+2026-02-18T01:55:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22123372088 # 881
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 220 287 / 222 289
+* notice: next accum: outdated-unq outdated-all / unq all: 221 288 / 223 290
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21] / []
+
 2026-02-17T01:51:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22083190228 # 880
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-17
